# Quail

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  build.ninja  quail.txt  update_llvm.ps1
.ninja/: properties.ninja
.quail/: build.bat  cb.ps1  cmake.txt  cmake_clear.ps1  cmake_refresh.bat  compress.ps1  configs.txt  extra.txt  getGitTag.ps1  getinsdata.ps1  getlicense.ps1  incrementBuildVersion.ps1  installer.txt  main.txt  manifest.ps1  properties.txt  quail.txt  sample.txt  shared.txt  uninstaller.txt
.quail/cmd/: cb.ps1  getinsdata.ps1  getlicense.ps1  incrementBuildVersion.ps1
.quail/cmd/cmake/: refresh.bat
cmake/: properties.cmake
code/inc/: Actions.hpp  Array.hpp  BaseTypes.hpp  Buffors.hpp  Commands.hpp  Framework.hpp  NppProcessor.hpp  Tokens.hpp  Validation.hpp
code/inc/Arguments/: Arguments.hpp  Commands.hpp  Parse.hpp  Validate.hpp
code/inc/Commands/: Help.hpp
code/inc/Commands/Open/: Buffor.hpp  IO.hpp  Open.hpp  Parse.hpp  Stages.hpp  Types.hpp
code/inc/Commands/Open/Projects/: Validate.hpp
code/inc/IO/: Constants.hpp  Projects.hpp
code/inc/IO/Projects/: Parse.hpp  Stages.hpp  Types.hpp
code/inc/lib/: Array.hpp  BaseTypes.hpp  Buffor.hpp  Executable.hpp  Framework.hpp  Pair.hpp  Pointer.hpp  Search.hpp
code/inc/project/: Create.hpp  Help.hpp  Open.hpp  Recreate.hpp
code/inc/project/open/: ParsingStages.hpp  Types.hpp
code/src/: Buffors.cpp  main.cpp
code/src/Commands/Open/: Stages.cpp
code/src/IO/Projects/: Stages.cpp
code/src/lib/: Executable.cpp
code/src/project/: Open.cpp
code/src/project/Open/: ParsingStages.cpp
dependencies/: CMakeLists.txt
dependencies/bluelib/include/blue/: debug.hpp  error.hpp  io.hpp  log.hpp  memory.hpp
dependencies/bluelib/include/blue/windows/: registry.hpp  types.hpp
examples/: github.txt  godot.txt  unity.txt  unreal.txt  windows explorer.txt  windows terminal.txt
examples/ExampleProject/.quail/: include.txt  quail.txt
examples/ExampleProject/subproject/.quail/: include.txt  quail.txt
examples/ExampleProject/subproject/subsubproject/: quail.txt
extra/: icon_quail.xcf  icon_wizard.xcf  wizard-icon.xcf  wizard_background.xcf  wizard_def.xcf
extra/icon_wizard/: 16x.xcf
project/: CMakeLists.txt
project/bluelib/inc/blue/: comparesearch.hpp  compiler_log.hpp  concepts.hpp  debug.hpp  error.hpp  io.hpp  io_types.hpp  log.hpp  memory.hpp  sal.hpp  timestamp.hpp  types.hpp
project/bluelib/inc/blue/windows/: controls.hpp  registry.hpp  types.hpp
project/global/: CMakeLists.txt
project/global/inc/global/: config.hpp  data.h  logger.hpp  registry.hpp  version.h
project/global/inc/global/logger/: cli.hpp  logger.hpp  win.hpp
project/global/inc/global/windows/: registry.hpp
project/inc/: comparesearch.hpp  registry.hpp
project/inc/activities/: activities.hpp  help.hpp  match.hpp  version.hpp
project/inc/base/: debug.hpp  error.hpp  io.hpp  log.hpp  memory.hpp  types.hpp
project/inc/instalation/: envars.hpp  main.hpp
project/inc/interpreter/: open_main.hpp  open_project.hpp
project/inc/locale/: error_codes.hpp
project/inc/open/: data.hpp  main.hpp
project/inc/open/interpreter/: main.hpp  project.hpp  types.hpp
project/installer/: CMakeLists.txt
project/installer/inc/: configuration.hpp  download.hpp  installation.hpp  localization.hpp  registry.hpp  resources.hpp
project/installer/inc/windows/: areo.hpp  console.hpp  window.hpp
project/installer/res/: Installer.exe.manifest  license.h  res_main.aps  res_main.rc  resource.h  targetver.h
project/installer/src/: main.cpp
project/myinstall/: CMakeLists.txt
project/myinstall/inc/: download.hpp  installation.hpp  io.hpp  localization.hpp  registry.hpp  resources.hpp
project/myinstall/inc/windows/: areo.hpp  registry.hpp  window.hpp
project/myinstall/res/: data.h  myinstall.exe.manifest  res_main.rc
project/myinstall/src/: main.cpp
project/myuninstall/: CMakeLists.txt
project/myuninstall/src/: main.cpp
project/quail/: CMakeLists.txt
project/quail/inc/: colors.hpp  comparesearch.hpp  registry.hpp
project/quail/inc/activities/: activities.hpp  help.hpp  match.hpp  settings.hpp  version.hpp
project/quail/inc/instalation/: envars.hpp  main.hpp
project/quail/inc/locale/: error_codes.hpp
project/quail/inc/open/: data.hpp  display.hpp  interpreter.hpp  main.hpp  open.hpp
project/quail/inc/open/interpreter/: main.hpp
project/quail/inc/settings/: data.hpp  display.hpp  property.hpp  settings.hpp
project/quail/inc/windows/: registry.hpp
project/quail/src/: main.cpp
project/src/: main.cpp
project/uninstaller/: CMakeLists.txt
project/uninstaller/res/: res_main.rc  uninstall.exe.manifest
project/uninstaller/src/: main.cpp
